@startuml
hide circle
skinparam classAttributeIconSize 0

title Class Diagram for Listing Agents Grouped by Store

class GetAgentListView {
}

class StoreContainer {
    +getAll(): List<Store>
    +getSortedAgentList(): List<Agent>
}

class Store {
    +getAgents(): List<Agent>
    +getDesignation(): string
}

class Agent {
    -id: string
    -name: string
    -email: string
    -phoneNumber: string
    +getName(): string
    +setStore(Store*): void
    +getStore(): Store*
}

class GetAgentListController {
    +fetchAgents(): List<Agent>
}

class Company {
    +getStoreContainer(): StoreContainer*
}

GetAgentListView ..right..> GetAgentListController
GetAgentListController ..> Company
GetAgentListController ..> StoreContainer

StoreContainer "1" -left-> "0..*" Store: records
StoreContainer ..> Agent
@enduml